wip: update theming docs

--- a/src/docs/5.30.x/wcp/link-a-project.mdx
+++ b/src/docs/5.30.x/wcp/link-a-project.mdx
@@ -7,7 +7,7 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="info" title="Can I use this?">
 
-Webiny Control Panel ("WCP") is currently in a private Alpha release. If you wish to join the Alpha testing program, register your interest on our [waiting list](https://site.webiny.com/forms/business-waiting-list/).
+Webiny Control Panel ("WCP") is currently in an open beta testing. If you wish to join the Beta testing program, register your interest on our [waiting list](https://site.webiny.com/forms/business-waiting-list/).
 
 </Alert>
 
